Replacing Expando with DynamicRecord that support case-insensitive lookups

--- a/src/Eggado.csproj
+++ b/src/Eggado.csproj
@@ -50,7 +50,7 @@
       <DependentUpon>DataSelectors.g.tt</DependentUpon>
     </Compile>
     <Compile Include="DbCommandExtensions.cs" />
-    <Compile Include="Expando.cs" />
+    <Compile Include="DynamicRecord.cs" />
     <Compile Include="Mannex\Collections\Generic\Dictionary.cs" />
     <Compile Include="DataReaderExtensions.cs" />
     <Compile Include="JetBrains.Annotations.cs" />
