--- a/src/Eggado.csproj
+++ b/src/Eggado.csproj
@@ -50,6 +50,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DataSelectors.g.tt</DependentUpon>
     </Compile>
+    <Compile Include="DataTableExtensions.cs" />
     <Compile Include="DbCommandExtensions.cs" />
     <Compile Include="DynamicRecord.cs" />
     <Compile Include="Eggnumerable.cs" />
