--- a/tests/Eggado.Tests.csproj
+++ b/tests/Eggado.Tests.csproj
@@ -47,6 +47,11 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataReaderExtensionTests.g.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataReaderExtensionTests.g.tt</DependentUpon>
+    </Compile>
     <Compile Include="Mannex\Reflection\Assembly.cs" />
     <Compile Include="DataReaderExtensionTests.cs" />
   </ItemGroup>
@@ -61,6 +66,15 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DataReaderExtensionTests.g.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DataReaderExtensionTests.g.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
